--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mcsg</groupId>
   <version>0.1.0</version>
-  <name>SurvivalGames</name>
+  <name>Walls</name>
       <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
