--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,12 @@
-name: SurvivalGames
-version: ${project.version}.${BUILD_NUMBER}
-main: org.mcsg.survivalgames.SurvivalGames
+name: Walls
+version: SG Build 0.5.8.42 Walls Build #${BUILD_NUMBER}
+main: org.mcsg.walls.Walls
 authors: [Double0negative]
-description: Fully Automated Hunger Games Plugin!
+description: Fully Automated Walls Plugin!
 
 commands:
-    survivalgames:
-        description: Survival Games Command
-        usage: /sg <command> <args>
-        aliases: [sg, hungergames, hg]
+    walls:
+        description: Walls Command
+        usage: /w <command> <args>
+        aliases: [w, walsl, wl]
 
